--- a/flaskblog/static/css/alert-comment-scrollbar.css
+++ b/flaskblog/static/css/alert-comment-scrollbar.css
@@ -10,16 +10,14 @@
 
 .alert {
   text-align: center;
-  width: 75%;
+  width: 100%;
   margin: 0 auto;
   margin-top: 75px;
   position: relative;
   padding: 0.75rem 1.25rem;
-  /* border: 1px solid transparent;
-  border-radius: 0.25rem; */
   border-radius: 4px;
   border-style: solid;
-  border-width: 1px 1px 1px 10px !important;
+  border-width: 1px 1px 1px 5px !important;
   z-index: 1000;
   font-family: sans-serif;
 }
@@ -51,6 +49,7 @@
   border-radius: 15px;
   color: white;
   text-align: center;
+  box-sizing: content-box;
 }
 
 .pageBtn {
@@ -62,8 +61,7 @@
   font-weight: bold;
   text-align: center;
   padding: 5px;
-  width: 20px;
-  height: 20px;
+  width: 35px;
   background-color: transparent;
   border: solid 1px #bbb;
   border-radius: 5px;
@@ -87,7 +85,7 @@
 
 .commentList {
   width: 80%;
-  margin: 25px auto;
+  margin: 50px auto;
   padding: 10px;
   border-radius: 15px;
   color: white;
@@ -98,14 +96,10 @@
 }
 
 .commentDisplay {
-  background-color: rgba(0, 0, 0, 0.8);
-  height: 50px;
-  margin-bottom: 5px;
-  border-radius: 15px;
-
-  -webkit-box-shadow: 1px 3px 20px 5px 0px rgba(71, 71, 71, 0.3);
-  -moz-box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 0.3);
-  box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 0.3);
+  background-color: var(--dark-color);
+  border-radius: 10px;
+  padding: 10px 20px;
+  margin: 10px 0;
 }
 .commentListLeft {
   width: 30%;
@@ -127,6 +121,7 @@
   font-size: 18px;
 }
 .comment {
+  white-space: normal;
   padding: 10px;
 }
 
@@ -144,7 +139,6 @@
 /* CONTACT */
 .contact {
   color: white;
-  font-family: "Work Sans", sans-serif;
   margin: 0 auto;
 }
 
