--- a/flaskblog/static/css/form.css
+++ b/flaskblog/static/css/form.css
@@ -4,6 +4,7 @@
   --dark-secondary-color: rgba(34, 49, 63);
   --dark-color: rgba(35, 38, 41, 0.8);
   --dark-text-color: rgba(35, 38, 41);
+  --warning-color: rgba(220, 53, 69, 1);
 }
 
 .form {
@@ -44,10 +45,11 @@
   font-size: 15px;
   background: none;
   border: 0;
-  border: 2px solid #7fccf7;
+  border: 2px solid var(--primary-color);
   border-radius: 15px;
   outline: none;
   transition: 0.25s;
+  font-family: "Work Sans", sans-serif;
 }
 
 .form-input:focus {
@@ -56,6 +58,7 @@
 
 .form-textarea {
   height: 15rem;
+  font-family: "Work Sans", sans-serif;
 }
 
 .form-submit-button {
@@ -125,143 +128,78 @@ textarea.form-control {
   width: 100%;
   height: 100px;
   position: relative;
+  text-align: center;
 }
 .commentForm form {
   margin: 10px;
 }
 
-.commentInput {
-  width: 75%;
-  height: 70px;
-  background-color: rgba(0, 0, 0, 0.8);
-  padding: 10px;
-  border: solid 1px #7fccf7;
-  border-radius: 10px;
-  color: white;
-  font-family: "sans-serif";
-  font-size: 15px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -webkit-box-shadow: 1px 3px 20px 5px 0px rgba(71, 71, 71, 0.7);
-  -moz-box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 0.7);
-  box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 0.7);
+.comment-input {
+  background-color: var(--dark-color);
+  height: 100px;
 }
 
-.emojionearea.commentInput {
-  width: 75%;
-  z-index: 1000;
+.comment-invalid-feedback {
+  margin-top: 25px;
 }
+
 .commentBtn {
   cursor: pointer;
-  background-color: black;
+  background-color: var(--dark-text-color);
   font-family: "Orbitron";
   font-size: 12px;
-  color: #7fccf7;
+  color: var(--primary-color);
   text-align: center;
-  border: none;
+  border: 0.5px solid var(--primary-color);
   outline: none;
-  width: 100px;
-  height: 30px;
-  border-radius: 15px;
+  padding: 10px 50px;
+  border-radius: 10px;
   position: absolute;
-  bottom: -10px;
+  bottom: -20px;
   left: 50%;
   transform: translate(-50%, 0px);
   transition: 0.5s;
   -webkit-box-shadow: 1px 3px 20px 5px 0px rgba(71, 71, 71, 0.8);
   -moz-box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 0.8);
   box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 0.8);
+  z-index: 750;
 }
 
 .commentBtn:hover {
   color: rgb(0, 162, 255);
+  font-weight: bold;
+  letter-spacing: 1px;
+  font-size: 13px;
 }
 
 .message {
+  margin-top: 20px;
   text-align: center;
   color: white;
   font-family: "Orbitron";
   font-size: 15px;
-}
-
-/* Contact Form */
-.contactForm {
-  text-align: center;
-}
-.contactInput {
-  display: block;
-  margin: 0 auto;
-  margin-bottom: 20px;
-  padding: 10px;
-  text-align: center;
-  color: white;
-  font-size: 15px;
-  background: none;
-  border: 0;
-  border-bottom: 2px solid #7fccf7;
-  outline: none;
-  transition: 0.25s;
-}
-
-.contactInput:focus {
-  width: 250px;
-  border-color: rgb(0, 162, 255);
-}
-
-.contactMessage {
-  display: block;
-  width: 200px;
-  margin: 0 auto;
-  margin-bottom: 20px;
-  padding: 10px;
-  text-align: center;
-  color: white;
-  font-size: 15px;
-  background: none;
-  border: 0;
-  border: 2px solid #7fccf7;
-  border-radius: 10px;
-  outline: none;
-  transition: 0.25s;
-}
-.contactMessage:focus {
-  width: 250px;
-  border-color: rgb(0, 162, 255);
-}
-
-.contactForm p {
-  color: white;
-  font-family: "Orbitron";
-  font-size: 20px;
-  text-align: center;
 }
 
 /* Search Form */
 .search {
   position: relative;
-  margin: 0 auto;
-  width: 90%;
+  max-width: 450px;
 }
 
 .searchInput {
-  background-color: black;
-  border: none;
-  color: white;
-  padding: 5px 8px;
-  width: 90%;
-  height: 30px;
+  background-color: var(--dark-color);
+  width: 100%;
+  color: var(--light-color);
+  padding: 10px 20px;
   margin: 0 auto;
-  border-radius: 15px;
+  border: solid 2px var(--dark-secondary-color);
+  border-radius: 10px;
   outline: none;
   transition: all 0.5s;
-  -webkit-box-shadow: 1px 3px 20px 5px 0px rgba(71, 71, 71, 0.5);
-  -moz-box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 0.5);
-  box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 0.5);
 }
+
 .searchInput:focus {
-  border: solid 1px #7fccf7;
+  border: solid 1px var(--primary-color);
 }
 
 .searchBtn {
