--- a/flaskblog/templates/base.html
+++ b/flaskblog/templates/base.html
@@ -29,10 +29,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap"
         rel="stylesheet" />
 
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/navbar.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/blog-card-original.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/blog-post.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/error.css') }}">
 
     <!--- My CSS --->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/footer.css') }}">
