--- a/flaskblog/templates/includes/footer.html
+++ b/flaskblog/templates/includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="d-flex align-items-center">
-    <div class="container d-flex justify-content-between">
+    <div class="container-md d-flex justify-content-between">
         <a href="{{ url_for('main.about') }}" class="footerBtn" id="aboutBtn">About</a>
         <a href="{{ url_for('auth.login') }}" class="footerBtn" id="creditsBtn"> &copyMPD</a>
         <a href="{{ url_for('main.contact') }}" class="footerBtn" id="contactBtn">Contact</a>
