--- a/flaskblog/static/css/blog-post.css
+++ b/flaskblog/static/css/blog-post.css
@@ -36,8 +36,8 @@
   letter-spacing: 10px;
 }
 
-.post-title span {
-  background-color: var(--light-color);
+.post-title-span {
+  background-color: rgba(228, 241, 254, 0.3);
   padding: 10px 20px;
 }
 
@@ -51,16 +51,6 @@
   border-radius: 10px;
   padding: 30px 50px;
   text-align: justify;
-}
-
-.test-background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  color: red;
-  width: 100%;
-  height: 100px;
-  z-index: 1100;
 }
 
 .line {
