--- a/flaskblog/static/css/form.css
+++ b/flaskblog/static/css/form.css
@@ -40,7 +40,7 @@
   margin: 0 auto;
   margin-bottom: 20px;
   padding: 15px;
-  text-align: center;
+  text-align: left;
   color: white;
   font-size: 15px;
   background: none;
@@ -79,11 +79,10 @@
 }
 
 .form-submit-button:hover {
-  color: var(--dark-text-color);
-  font-weight: bold;
   letter-spacing: 2px;
-  border-color: rgb(0, 162, 255);
-  background-color: var(--primary-color);
+  color: var(--light-color);
+  border-color: var(--primary-color);
+  background-color: var(--dark-secondary-color);
 }
 
 .form-link-text,
