--- a/flaskblog/templates/admin/admin-base.html
+++ b/flaskblog/templates/admin/admin-base.html
@@ -76,6 +76,22 @@
     <script src="https://cdn.datatables.net/v/bs5/dt-1.13.4/datatables.min.js"></script>
 
     <!-- <script src="{{ url_for('static', filename='adminKit/test.js') }}"></script> -->
+
+    <script>
+        $(document).ready(function () {
+            // Find all elements with ".alert" class
+            $('.alert').each(function () {
+                var timeout = $(this).data('timeout'); // Read "data-timeout" attribute
+                var alert = $(this); // Store the alert element reference
+
+                // Use setTimeout to close the alert after the specified time
+                setTimeout(function () {
+                    alert.alert('close'); // Close the alert using Bootstrap's close method
+                }, timeout);
+            });
+        });
+    </script>
+
 </body>
 
 </html>
