--- a/flaskblog/templates/includes/footer.html
+++ b/flaskblog/templates/includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="d-flex align-items-center">
     <div class="container-md d-flex justify-content-between">
-        <a href="{{ url_for('main.about') }}" class="footerBtn" id="aboutBtn">About</a>
-        <a href="{{ url_for('main.about_mpd_tech') }}" class="footerBtn" id="creditsBtn"> &copyMPDTech</a>
-        <a href="{{ url_for('main.contact') }}" class="footerBtn" id="contactBtn">Contact</a>
+        <a href="{{ url_for('main.about') }}" class="footerBtn">About</a>
+        <a href="{{ url_for('main.about_mpd_tech') }}" class="footerBtn"> &copyMPDTech</a>
+        <a href="{{ url_for('main.contact') }}" class="footerBtn">Contact</a>
     </div>
 </footer>
