--- a/flaskblog/templates/admin/admin-includes/admin-footer.html
+++ b/flaskblog/templates/admin/admin-includes/admin-footer.html
@@ -12,17 +12,9 @@
             <div class="col-6 text-end">
                 <ul class="list-inline">
                     <li class="list-inline-item">
-                        <a class="text-muted" href="#" target="_blank">Support</a>
+                        <p class="text-muted mb-0">Powered by <a class="text-muted"
+                                href="{{ url_for('main.about_mpd_tech')}}">MPDTech</a></p>
                     </li>
-                    <li class="list-inline-item">
-                        <a class="text-muted" href="#" target="_blank">Help Center</a>
-                    </li>
-                    <!-- <li class="list-inline-item">
-                        <a class="text-muted" href="https://adminkit.io/" target="_blank">Privacy</a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="text-muted" href="https://adminkit.io/" target="_blank">Terms</a>
-                    </li> -->
                 </ul>
             </div>
         </div>
