--- a/flaskblog/templates/admin/admin-request-logs.html
+++ b/flaskblog/templates/admin/admin-request-logs.html
@@ -130,11 +130,13 @@
 {% block scripts %}
 <script>
     // DataTable - Tablica
+    // When the document is ready (page is fully loaded)
     $(document).ready(function () {
+        // Initialize DataTable for the table with ID "datatable-logs"
         $("#datatable-logs").DataTable({
-            "order": [[0, "desc"]]
+            "order": [[0, "desc"]] // Specify default sorting order for columns
         });
-
     });
+
 </script>
 {% endblock scripts %}
