--- a/flaskblog/templates/admin/admin-users.html
+++ b/flaskblog/templates/admin/admin-users.html
@@ -13,8 +13,11 @@
     <!-- <div class="col-12 col-lg-8 col-xxl-9 d-flex"> -->
     <div class="col-12">
         <div class="card rounded-3 bg-dark">
-            <div class="card-header bg-dark">
-                <h5 class="card-title mb-0">List of All Users</h5>
+            <div class="card-header bg-dark d-flex justify-content-between">
+                <h5 class="card-title mb-0">List of all Users</h5>
+                <a class="btn btn-dark" href="{{ url_for('users.create_user') }}">
+                    <i class="align-middle me-2" data-feather="user-plus"></i> New User
+                </a>
             </div>
             <div class="card-body">
                 <table class="table table-dark table-hover my-0" id="datatable-posts">
@@ -74,10 +77,14 @@
 {% block scripts %}
 <script>
     // DataTable - Tablica
+    // When the document is ready (page is fully loaded)
     $(document).ready(function () {
+        // Initialize DataTable for the table with the ID "datatable-posts"
         $('#datatable-posts').DataTable({
-            "order": [[1, "asc"]]
+            // Specify default sorting order for columns
+            "order": [[1, "asc"]] // Sorting by the second column (index 1) in ascending order ("asc")
         });
     });
+
 </script>
 {% endblock scripts %}
