--- a/SoftyTechCMS/templates/post.html
+++ b/SoftyTechCMS/templates/post.html
@@ -41,7 +41,7 @@
         </form>
     </div>
     {% else %}
-    <p class="message">Please login to leave a comment. :)</p>
+    <p class="message">Please login to leave a comment. &#128513</p>
     {% endif %}
     <div class="commentList">
         {% for comment in comments %}
