--- a/SoftyTechCMS/static/css/form.css
+++ b/SoftyTechCMS/static/css/form.css
@@ -121,6 +121,69 @@ textarea.form-control {
   height: auto;
 }
 
+/* Social Login Buttons */
+.socialLoginBtn {
+  box-sizing: border-box;
+  position: relative;
+  display: block;
+  max-width: 16em;
+  margin: 0.5em auto;
+  padding: 10px 15px 10px 46px;
+  border: none;
+  text-align: left;
+  border-radius: 10px;
+  font-size: 14px;
+  color: #fff;
+  text-decoration: none;
+  font-family: "Orbitron", sans-serif;
+}
+.socialLoginBtn:before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 34px;
+  height: 100%;
+}
+.socialLoginBtn:focus {
+  outline: none;
+}
+.socialLoginBtn:active {
+  box-shadow: inset 0 0 0 32px rgba(0, 0, 0, 0.1);
+}
+
+/* Facebook */
+.socialLoginBtn-facebook {
+  background-color: #4c69ba;
+  background-image: linear-gradient(#4c69ba, #3b55a0);
+  text-shadow: 0 -1px 0 #354c8c;
+}
+.socialLoginBtn-facebook:before {
+  border-right: #364e92 1px solid;
+  background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_facebook.png")
+    6px 6px no-repeat;
+}
+.socialLoginBtn-facebook:hover,
+.socialLoginBtn-facebook:focus {
+  background-color: #5b7bd5;
+  background-image: linear-gradient(#5b7bd5, #4864b1);
+}
+
+/* Google */
+.socialLoginBtn-google {
+  background: #dd4b39;
+}
+.socialLoginBtn-google:before {
+  border-right: #bb3f30 1px solid;
+  background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_google.png")
+    6px 6px no-repeat;
+}
+.socialLoginBtn-google:hover,
+.socialLoginBtn-google:focus {
+  background: #e74b37;
+}
+
 /* Comment Form */
 
 .commentForm {
