--- a/SoftyTechCMS/static/css/blog-post.css
+++ b/SoftyTechCMS/static/css/blog-post.css
@@ -22,6 +22,12 @@
   width: 100%;
   height: auto;
   display: block;
+  transition: filter 0.3s ease-in-out;
+}
+
+.post-head-image-container img:hover {
+  filter: blur(2px);
+  -webkit-filter: blur(2px);
 }
 
 .post-title {
@@ -99,7 +105,7 @@
 .post-content h4,
 .post-content h5 {
   font-family: "Orbitron", sans-serif;
-  line-height: 3;
+  margin: 15px 0;
 }
 
 .post-content blockquote {
