--- a/SoftyTechCMS/static/css/blog-post.css
+++ b/SoftyTechCMS/static/css/blog-post.css
@@ -124,3 +124,29 @@
 .post-content hr {
     margin: 10px;
 }
+
+.comment-login-link {
+    color: var(--primary-color);
+    font-family: "Orbitron", sans-serif;
+    text-decoration: none;
+    transition: all 1s ;
+}
+
+.comment-login-link:hover {
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
+.comment-login-link:after {
+    content: "\f054";
+    font-family: FontAwesome;
+    margin-left: -10px;
+    opacity: 0;
+    vertical-align: middle;
+    transition: margin 0.3s, opacity 0.3s;
+}
+
+.comment-login-link:hover:after {
+    margin-left: 5px;
+    opacity: 1;
+}
